# Document_RAG-Chatbot

./: .gitignore  README.md  db_init.sql  docker-compose.yaml  package-lock.json  package.json
backend/: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml  pytest.ini  requirements.txt  tempCodeRunnerFile.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: auth.py  chatbot.py  documents.py  users.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  constants.py  exceptions.py
backend/app/crud/: auth.py  chat_log.py  session_id.py
backend/app/db/: database.py
backend/app/evaluate/: langsmith_setting.py  retriever_evaluate.py
backend/app/models/: auth.py  chat_log.py  session_id.py
backend/app/schemas/: chat_log.py
backend/app/services/: chat_service.py  embedding.py
backend/app/util/: auth.py  chat_history.py  chatbot.py  dependencies.py  document.py  logger.py  session_id.py  tokenizer.py
backend/core/: auth.py  config.py  logger.py
backend/crud/: api_log.py  auth.py  chat_history.py  chat_log.py  session_id.py  user.py
backend/db/: database.py
backend/evaluate/: langsmith_setting.py  retriever_evaluate.py
backend/models/: auth.py  chat_history.py  chat_log.py  session_id.py  user.py
backend/schemas/: chat_log.py  user.py
backend/services/: chat_service.py
backend/tests/: conftest.py  test_app.py
backend/tests/util/: test_tokenizer.py
backend/util/: auth.py  chat_history.py  chatbot.py  dependencies.py  document.py  func.py  logger.py  session_id.py  tokenizer.py
db/: init.sql
(+38 files in other folders)
